--- a/index.html
+++ b/index.html
@@ -102,15 +102,61 @@
                     <sm-button variant="primary" style="width: 20%;" id="trbtn" onclick="trbtn()">CREATE</sm-button>
                 </sm-form>
                 <div id="otp"></div>
+               <!-- <label id="minutes">00</label>:<label id="seconds">00</label> -->
+                <div id="waiting"></div>
                 <script>
                     function trbtn(){
+                        document.getElementById("otp").innerHTML="<br><span class='spinner'><sm-spinner></sm-spinner></span><br>";
+                       document.getElementById("waiting").innerHTML="<br>Please wait until the tree is constructed!!<br>Tree will be constructed within 5minutes!!"
+                      /*  var minutesLabel = document.getElementById("minutes");
+                        var secondsLabel = document.getElementById("seconds");
+                        var totalSeconds = 0;
+                        while(totalSeconds<300){
+
+                        setInterval(setTime, 1000);
+                        function setTime() {
+                        ++totalSeconds;
+                        secondsLabel.innerHTML = pad(totalSeconds % 60);
+                        minutesLabel.innerHTML = pad(parseInt(totalSeconds / 60));
+                        }
+
+                        function pad(val) {
+                        var valString = val + "";
+                        if (valString.length < 2) {
+                            return "0" + valString;
+                        } else {
+                            return valString;
+                        }
+                        }}*/
+                        let flag=0;
+                        let i=0;
+                        for(i=0;i<=300000;i++){
+                            i++;
+                            let trid=document.getElementById("trid").value;
+                            let trlist=trid.split(",");
+                            if(trlist.length>="100"){
+                                flag=1;
+                                break;
+                            }
+                            if(i==300000){
+                                flag=1;
+                                break;
+                            }
+                        }
+                        
+                        if(flag==1){
                         let trid=document.getElementById("trid").value;
                         let trlist=trid.split(",");
                         tree=new MerkleTree(trlist);
                         tree.createTree();
                         rootHash=tree.getRootHash();
+                        document.getElementById("waiting").innerHTML=" ";
                         document.getElementById("otp").innerHTML="<br><b>Root : </b>"+rootHash;
+                        }
+
                     }
+                
+
 
                 </script>
             </section>
