--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
                <sm-form class="block"><br><br>
                 <h1 align="center" style="text-decoration:underline;">Merkle Tree</h1><br>
-                    <sm-input placeholder="Enter Transaction id's separated by comma(,) "  id="trid" ></sm-input>
+                    <sm-input placeholder="Enter Transaction id's separated by comma(,) "  id="trid" animate></sm-input>
                     <sm-button variant="primary" id="trbtn">CREATE</sm-button>
                 </sm-form>
                 <div class="block">
@@ -113,7 +113,18 @@
                <!-- <label id="minutes">00</label>:<label id="seconds">00</label> -->
                 <div id="waiting"></div>
                 </div><br><br>
-
+                <div>
+                    <br><sm-form>
+                        <h1 align="center" style="text-decoration:underline;">Verify Element</h1><br>
+                        <sm-input placeholder="Enter the element to verify" id="ele" animate></sm-input>
+                        <sm-input placeholder="Enter the path" id="path11" animate></sm-input>
+                        <sm-input placeholder="Enter the Roothash" id="roothash" animate></sm-input>
+                        <sm-button variant="primary" id="vrbtn">VERIFY</sm-button><br><br>
+                    </sm-form>
+                    <div class="otpstyle">
+                        <div id="otp2"></div>
+                    </div>
+                </div>
             </section>
             <section class="section">
                 <div class="section__header">
