--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <h1 align="center" style="text-decoration:underline;">Verify Element</h1><br>
                         <sm-input placeholder="Enter the element to verify" id="ele" animate></sm-input>
                         <sm-input placeholder="Enter the path" id="path11" animate></sm-input>
-                        <sm-input placeholder="Enter the Roothash" id="roothash" animate></sm-input>
+                        <sm-input placeholder="Enter the Roothash" id="roothash1" animate></sm-input>
                         <sm-button variant="primary" id="vrbtn">VERIFY</sm-button><br><br>
                     </sm-form>
                     <div class="otpstyle">
