--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 </sm-form>
                 <div class="block">
                     <div class="otpstyle">
+                <div id="otp3"></div>
                 <div id="otp"></div>
                 <div id="otp1"></div>
                 </div>
@@ -119,6 +120,7 @@
                         <sm-input placeholder="Enter the element to verify" id="ele" animate></sm-input>
                         <sm-input placeholder="Enter the path" id="path11" animate></sm-input>
                         <sm-input placeholder="Enter the Roothash" id="roothash1" animate></sm-input>
+                        <sm-input placeholder="Enter the Unique ID" id="uniqid" animate></sm-input>
                         <sm-button variant="primary" id="vrbtn">VERIFY</sm-button><br><br>
                     </sm-form>
                     <div class="otpstyle">
