--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                     </sm-form>
                     <div class="otpstyle">
                         <div id="otp2"></div>
+                        <div id="otp4"></div>
                     </div>
                 </div>
             </section>
