fixed css bugs and added scrollbar to output

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                <sm-form class="block"><br><br>
                 <h1 align="center" style="text-decoration:underline;">Merkle Tree</h1><br>
                     <sm-input placeholder="Enter Transaction id's separated by comma(,) "  id="trid" animate></sm-input>
-                    <sm-button variant="primary" id="trbtn">CREATE</sm-button>
+                    <sm-button variant="primary" id="trbtn">CREATE</sm-button><br>
                 </sm-form>
                 <div class="block">
                     <div class="otpstyle">
@@ -121,13 +121,13 @@
                         <sm-input placeholder="Enter the path" id="path11" animate></sm-input>
                         <sm-input placeholder="Enter the Roothash" id="roothash1" animate></sm-input>
                         <sm-input placeholder="Enter the Unique ID" id="uniqid" animate></sm-input>
-                        <sm-button variant="primary" id="vrbtn">VERIFY</sm-button><br><br>
+                        <sm-button variant="primary" id="vrbtn">VERIFY</sm-button><br>
                     </sm-form>
                     <div class="otpstyle">
                         <div id="otp2"></div>
                         <div id="otp4"></div>
                     </div>
-                </div>
+                </div><br><br><br>
             </section>
             <section class="section">
                 <div class="section__header">
